--- a/_includes/css/base.css
+++ b/_includes/css/base.css
@@ -379,3 +379,38 @@ span.lineno {
 	justify-content: space-evenly;
 	align-items: left;
 }
+
+
+/* ---- reset ---- */
+
+body {
+	margin: 0;
+	font:normal 75% Arial, Helvetica, sans-serif;
+  }
+  
+  canvas {
+	display: block;
+	width: 100%;
+	height: 100%;
+	vertical-align: bottom;
+  }
+  
+  /* ---- particles.js container ---- */
+  #header {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-repeat: repeat;
+	background-size: cover;
+	background-position: 50% 50%;
+  }
+
+  #main {
+	z-index: -1;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: 50% 50%;
+  }
