--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,6 +1,7 @@
 {% if site.google_analytics_key %}
-<script type="text/javascript">
-
+<!-- 
+  Original Google Analytics (UA) code is kept for reference but will be managed through GTM
+  <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', '{{ site.google_analytics_key }}']);
   _gaq.push(['_trackPageview']);
@@ -10,6 +11,16 @@
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
+  </script>
+-->
 
+<!-- Google Analytics tracking ID is available to GTM via dataLayer -->
+<script>
+  window.dataLayer = window.dataLayer || [];
+  window.dataLayer.push({
+    'ga_id': '{{ site.google_analytics_key }}',
+    'ga_page_location': window.location.href,
+    'ga_page_title': document.title
+  });
 </script>
 {% endif %}
